# termorg

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  ORIGIN.md  README.md
.github/workflows/: ci.yml
docs/hooks/: README.md
docs/product/: ACCEPTANCE.md  DATA-MODEL.md  DECISIONS.md  FEATURE-SETS.md  PLAN.md
examples/: claude-settings-hooks-snippet.json  codex-hooks-termorg.json  kilo-hooks-termorg.md
src/: agent.rs  ambient.rs  attention.rs  error.rs  filter.rs  hints.rs  lib.rs  list_json.rs  main.rs  notify.rs  path_group.rs  persist.rs  queue.rs  signals.rs  store.rs  ui.rs
src/cli/: args.rs  commands.rs  mod.rs
src/provider/: kitty.rs  mod.rs  multi.rs  tmux.rs
src/provider/kitty/: ls.rs  mod.rs  raise.rs  remote.rs
src/ui/: mod.rs  rows.rs  theme.rs
