[package]
name = "termorg"
version = "0.1.0"
edition = "2021"
description = "Terminal Organiser — control plane over terminal sessions"
license = "MIT"

[[bin]]
name = "termorg"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "wayland", "x11", "glow"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
